# serial_debug_tool

./: .gitignore  CMakeLists.txt  README.md  deploy.bat  软件需求说明书.md
include/core/: ChannelManager.h  ModbusController.h  ScriptManager.h  SerialPortManager.h  TcpNetworkManager.h
include/ui/: AddChannelDialog.h  AddEditModbusTagDialog.h  CDialogBase.h  CMessageBox.h  CTabWidget.h  FramelessBase.h  MainWindow.h  ModbusConfigTab.h  ModbusDisplayWidget.h  ModbusTagModel.h  RemoveChannelDialog.h  SampleRateDialog.h  ScriptEditorDialog.h  SerialPortConfigTab.h  SerialPortConnectConfigWidget.h  SerialPortDataReceiveWidget.h  SerialPortDataSendWidget.h  SerialPortRealTimeSaveWidget.h  SerialPortReceiveSettingsWidget.h  SerialPortSendSettingsWidget.h  SettingsTab.h  SplashScreen.h  TagManagerDialog.h  TcpNetworkClientWidget.h  TcpNetworkConfigTab.h  TcpNetworkServerWidget.h  TitleBar.h  WaveformCtrlWidget.h  WaveformTab.h  WaveformWidget.h
include/utils/: DataPacket.h  JavaScriptHighlighter.h  ModbusTag.h  ModbusUtils.h  NetworkModeState.h  PacketProcessor.h  SerialPortSettings.h  StyleLoader.h  ThreadPoolManager.h  ThreadSetup.h
resources/: version.rc
resources/qss/: add_channel_dialog.qss  dialog_base.qss  message_box.qss  modbus_config_tab.qss  modbus_display_widget.qss  remove_channel_dialog.qss  sample_rate_dialog.qss  script_editor_dialog.qss  serial_port_connect_config_widget.qss  serial_port_data_receive_widget.qss  serial_port_data_send_widget.qss  serial_port_real_time_save_widget.qss  serial_port_receive_settings.qss  serial_port_receive_settings_widget.qss  serial_port_send_settings.qss  serial_port_send_settings_widget.qss  serial_prot_config_tab.qss  settings_tab.qss  tab_bar.qss  tab_style.qss  tag_manager_dialog.qss  tcp_network_client_wdiget.qss  tcp_network_config_tab.qss  tcp_network_server_wdiget.qss  title_bar.qss  title_bar_style.qss  wave_form_ctrl_widget.qss  wave_form_tab.qss
resources/web/: wave.html
src/: main.cpp
src/core/: ChannelManager.cpp  ModbusController.cpp  ScriptManager.cpp  SerialPortManager.cpp  TcpNetworkManager.cpp
src/ui/: AddChannelDialog.cpp  AddEditModbusTagDialog.cpp  CDialogBase.cpp  CMessageBox.cpp  CTabWidget.cpp  FramelessBase.cpp  MainWindow.cpp  ModbusConfigTab.cpp  ModbusDisplayWidget.cpp  ModbusTagModel.cpp  RemoveChannelDialog.cpp  SampleRateDialog.cpp  ScriptEditorDialog.cpp  SerialPortConfigTab.cpp  SerialPortConnectConfigWidget.cpp  SerialPortDataReceiveWidget.cpp  SerialPortDataSendWidget.cpp  SerialPortRealTimeSaveWidget.cpp  SerialPortReceiveSettingsWidget.cpp  SerialPortSendSettingsWidget.cpp  SettingsTab.cpp  SplashScreen.cpp  TagManagerDialog.cpp  TcpNetworkClientWidget.cpp  TcpNetworkConfigTab.cpp  TcpNetworkServerWidget.cpp  TitleBar.cpp  WaveformCtrlWidget.cpp  WaveformTab.cpp  WaveformWidget.cpp
src/utils/: JavaScriptHighlighter.cpp  ModbusUtils.cpp  PacketProcessor.cpp  SerialPortSettings.cpp  StyleLoader.cpp  ThreadPoolManager.cpp
